goodbytz/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goodbytz-api
  labels:
    app: goodbytz
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: goodbytz
    component: api
