goodbytz/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goodbytz-db
  labels:
    app: goodbytz
    component: db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: goodbytz
    component: db
