goodbytz/k8s/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goodbytz-mqtt
  labels:
    app: goodbytz
    component: mqtt
spec:
  type: ClusterIP
  ports:
  - port: 1883
    targetPort: 1883
    protocol: TCP
    name: mqtt
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: websocket
  selector:
    app: goodbytz
    component: mqtt
